--- a/TaskManager/Views/Priorities/Delete.cshtml
+++ b/TaskManager/Views/Priorities/Delete.cshtml
@@ -8,7 +8,7 @@
 <p class="text-danger">@ViewData["ErrorMessage"]</p>
 <h3>Are you sure you want to delete this?</h3>
 <div>
-  <h4>Student</h4>
+  <h4>Priority</h4>
   <hr />
   <dl class="row">
     <dt class = "col-sm-2">
