--- a/TaskManager/Views/Shared/_Layout.cshtml
+++ b/TaskManager/Views/Shared/_Layout.cshtml
@@ -17,17 +17,7 @@
                     <span class="navbar-toggler-icon"></span>
           </button>
           <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-            <ul class="navbar-nav flex-grow-1">
-              <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Statuses" asp-action="Index">Statuses</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Priorities" asp-action="Index">Priorities</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Tasks" asp-action="Index">Tasks</a>
-              </li>
-            </ul>
+            <partial name="_MainMenuPartial" />
             <partial name="_LoginPartial" />
           </div>
         </div>
