--- a/TaskManager/Views/Statuses/Delete.cshtml
+++ b/TaskManager/Views/Statuses/Delete.cshtml
@@ -8,13 +8,13 @@
 <p class="text-danger">@ViewData["ErrorMessage"]</p>
 <h3>Are you sure you want to delete this?</h3>
 <div>
-  <h4>Student</h4>
+  <h4>Status</h4>
   <hr />
   <dl class="row">
-    <dt class = "col-sm-2">
+    <dt class="col-sm-2">
       @Html.DisplayNameFor(model => model.SttName)
     </dt>
-    <dd class = "col-sm-10">
+    <dd class="col-sm-10">
       @Html.DisplayFor(model => model.SttName)
     </dd>
   </dl>
