--- a/TaskManager/Views/Tasks/Delete.cshtml
+++ b/TaskManager/Views/Tasks/Delete.cshtml
@@ -8,15 +8,34 @@
 <p class="text-danger">@ViewData["ErrorMessage"]</p>
 <h3>Are you sure you want to delete this?</h3>
 <div>
-  <h4>Student</h4>
+  <h4>Task</h4>
   <hr />
   <dl class="row">
-    <dt class = "col-sm-2">
+    <dt class="col-sm-2">
       @Html.DisplayNameFor(model => model.TskTitle)
     </dt>
-    <dd class = "col-sm-10">
+    <dd class="col-sm-10">
       @Html.DisplayFor(model => model.TskTitle)
     </dd>
+    <dt class="col-sm-2">
+      @Html.DisplayNameFor(model => model.TskDescription)
+    </dt>
+    <dd class="col-sm-10">
+      @Html.DisplayFor(model => model.TskDescription)
+    </dd>
+    <dt class="col-sm-2">
+      @Html.DisplayNameFor(model => model.PriorityId)
+    </dt>
+    <dd class="col-sm-10">
+      @Html.DisplayFor(model => model.PriorityNavigation.PrtName)
+    </dd>
+    <dt class="col-sm-2">
+      @Html.DisplayNameFor(model => model.StatusId)
+    </dt>
+    <dd class="col-sm-10">
+      @Html.DisplayFor(model => model.StatusNavigation.SttName)
+    </dd>
+
   </dl>
     
   <form asp-action="Delete">
